# jarvis_aws

./: AGENTS.md  CONTEXT.md  Makefile  jarvis-capabilities-summary.md
jarvis-app/src-tauri/: .gitignore  Cargo.toml  Info.plist  TRANSCRIPTION_SETUP.md  build.rs  entitlements.plist  tauri.conf.json
jarvis-app/src-tauri/binaries/: IntelligenceKit-aarch64-apple-darwin  JarvisListen-aarch64-apple-darwin  JarvisListen-x86_64-unknown-linux-gnu
jarvis-app/src-tauri/capabilities/: default.json
jarvis-app/src-tauri/sidecars/mlx-server/: README.md  requirements.txt  server.py
jarvis-app/src-tauri/src/: commands.rs  error.rs  files.rs  lib.rs  logging.rs  platform.rs  recording.rs  shortcuts.rs  wav.rs
jarvis-app/src-tauri/src/agents/: chatable.rs  chatbot.rs  copilot.rs  mod.rs  project_agent.rs  project_chat.rs  recording_chat.rs
jarvis-app/src-tauri/src/browser/: accessibility.rs  accessibility_tests.rs  mod.rs  observer.rs  tabs.rs  youtube.rs
jarvis-app/src-tauri/src/browser/adapters/: chrome.rs  mod.rs
jarvis-app/src-tauri/src/browser/extractors/: chatgpt.rs  claude_extension.rs  generic.rs  gmail.rs  medium.rs  (+1 more)
jarvis-app/src-tauri/src/gems/: mod.rs  sqlite_store.rs  sqlite_store.rs.bak  store.rs
jarvis-app/src-tauri/src/intelligence/: intelligencekit_provider.rs  llm_model_manager.rs  mlx_provider.rs  mod.rs  noop_provider.rs  provider.rs  queue.rs  utils.rs  venv_manager.rs
jarvis-app/src-tauri/src/knowledge/: assembler.rs  commands.rs  local_store.rs  migration.rs  mod.rs  store.rs
jarvis-app/src-tauri/src/projects/: commands.rs  mod.rs  sqlite_store.rs  store.rs
jarvis-app/src-tauri/src/search/: commands.rs  composite_provider.rs  fts_provider.rs  mod.rs  provider.rs  qmd_provider.rs  tavily_provider.rs
jarvis-app/src-tauri/src/settings/: manager.rs  mod.rs  model_manager.rs  tests.rs
jarvis-app/src-tauri/src/transcription/: audio_buffer.rs  audio_router.rs  hybrid_provider.rs  manager.rs  mod.rs  provider.rs  vad.rs  vosk_provider.rs  whisper_provider.rs  whisperkit_provider.rs
(+377 files in other folders)
