[package]
name = "jarvis-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jarvis_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dirs = "5"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
nix = { version = "0.29", features = ["signal", "fs"] }
dirs = "5"
chrono = "0.4"
whisper-rs = { version = "0.13", features = ["metal"] }
vosk = "0.3"  # Requires libvosk.dylib in ~/.jarvis/lib/ (copied from Python vosk package)
# silero-vad-rust = "6.2"  # Disabled - ndarray version conflict between crate (0.16) and ort (0.17)
# silero-vad-rs = "0.1"  # Broken - downloads wrong model (528MB STT instead of 2MB VAD)
ort = { version = "2.0.0-rc.9", default-features = false }  # ONNX runtime for Silero VAD
ort-sys = { version = "=2.0.0-rc.9", features = ["download-binaries"] }  # ONNX runtime native libs
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["stream", "blocking", "multipart", "json"] }
futures-util = "0.3"
regex = "1"
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"

[dev-dependencies]
proptest = "1"
tempfile = "3"

